# snet

./: CMakeLists.txt  README.md
cmake/: Compiler.cmake
include/snet/: addrinfo_endpoint.hpp  common.hpp  common_posix.hpp  common_win.hpp  endpoint.hpp  exception.hpp  init.hpp  last_error.hpp  last_error_impl_posix.inc  last_error_impl_win.inc  protocol.hpp  resolver.hpp  resolver_endpoint.hpp  resolver_iterator.hpp  result.hpp  socket.hpp  socket_error.hpp  socket_error_impl_posix.inc  socket_error_impl_win.inc  socket_impl.inc  socket_impl_posix.inc  socket_impl_win.inc  socket_option.hpp  tcp.hpp
include/snet/detail/: socket_option_types.hpp
tests/: CMakeLists.txt  peer_client.cpp  peer_server.cpp  socket.cpp
